2008-03-14  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #268259 (bugzilla.novell.com)

	* calendar/e-cal-backend-exchange.c: (open_calendar): Don't require
	restart of Evolution to create appointment on switching from offline
	to online mode. 

2008-03-10  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.22.0 release

2008-02-25  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.21.92 release.

2008-02-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #518569

	* addressbook/e-book-backend-gal.c: (member_populate):
	Properly format name and address with "<>" characters.

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c: (receive_objects):
	* calendar/e-cal-backend-exchange-tasks.c: (receive_task_objects): Free
	the memory returned by e_cal_component_get_recurid_as_string.									   

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	* configure.in: set HANDLE_LIBICAL_MEMORY to 1.

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #516408
	* calendar/e-cal-backend-exchange-calendar.c (add_ical),
	(create_object), (modify_object_with_href), (remove_object),
	(receive_objects), (get_free_busy):
	* calendar/e-cal-backend-exchange-tasks.c (get_changed_tasks),
	(receive_task_objects):
	* calendar/e-cal-backend-exchange.c (timeout_save_cache),
	(uncache), (get_object), (get_default_object), (get_timezone):
	* mail/mail-utils.c (mail_util_demangle_meeting_related_message): Free
	the memory returned by libical.

2008-02-21 Johnny Jacob <jjohnny@novell.com>
	
	Committed on behalf of Veerapuram Varadhan <vvaradhan@novell.com>

	** Fix for bug #432885

	* mail/mail-stub-exchange.c: (get_folder_info): Rescan the hierarchy - 
	as we don't rescan foreign hierarchies anywhere for mailer and only 
	when we are starting up.
	
2008-02-22  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #514836
